# JartBROWSER

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.hybrid.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.vps.yml  docker-compose.yml  nginx.production.conf  package.json  pnpm-workspace.yaml
backend/: README.md  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/jartbrowser/: __init__.py
backend/src/jartbrowser/api/: router.py
backend/src/jartbrowser/api/endpoints/: __init__.py  agent.py  browser.py  config.py  docker.py  health.py  mcp.py  prompts.py  providers.py  skills.py  task_scheduler.py  vision.py  workflow.py
backend/src/jartbrowser/core/: config.py  logging.py
backend/src/jartbrowser/mcp/: server.py
backend/src/jartbrowser/models/: database.py  schemas.py
backend/src/jartbrowser/services/: __init__.py  agent_persistence.py  audit_log.py  bookmark.py  browser_automation.py  database.py  dom_scanner.py  encryption.py  error_recovery.py  history.py  llm_provider.py  llm_service.py  mcp_integration.py  multi_tab.py  oauth.py  privacy.py  session_persistence.py  tab_search.py  task_scheduler.py  vision.py  window_persistence.py  workflow.py
backend/tests/: conftest.py  test_browser_automation.py  test_error_recovery.py  test_task_scheduler.py  test_vision.py  test_workflow.py
chrome-extension/: README.md  manifest.json  package.json
docs/: troubleshooting.md
electron-app/: README.md  package.json  vite.config.ts
(+52 files in other folders)
